force-app/main/default/objects/AuditTrailWatcherRuleCondition__c/AuditTrailWatcherRuleCondition__c.object-meta.xml
<CustomObject>
    <description>Conditions for Audit Trail Watcher rules. Each condition defines Action, Operator, and Value to evaluate against Setup Audit Trail records.</description>
    <label>Audit Trail Watcher Rule Condition</label>
    <nameField>
        <displayFormat>CON-{0000}</displayFormat>
        <label>Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Trail Watcher Rule Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>