force-app/main/default/objects/AuditTrailWatcherRuleCondition__c/fields/AuditTrailWatcherRule__c.field-meta.xml
<CustomField>
    <fullName>AuditTrailWatcherRule__c</fullName>
    <description>Parent Audit Trail Watcher Rule</description>
    <label>Audit Trail Watcher Rule</label>
    <referenceTo>AuditTrailWatcherRule__c</referenceTo>
    <relationshipLabel>Rule Conditions</relationshipLabel>
    <relationshipName>AuditTrailWatcherRuleConditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>