force-app/main/default/objects/AuditTrailWatcherRuleCondition__c/fields/ConditionNumber__c.field-meta.xml
<CustomField>
    <fullName>ConditionNumber__c</fullName>
    <description>Number used to reference this condition in custom logic formulas (e.g., 1, 2, 3). Must be unique per rule.</description>
    <label>Condition Number</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>