force-app/main/default/objects/AuditTrailWatcherRuleCondition__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <description>Operator used to evaluate the Display field (Equals, NotEquals, Contains, NotContains, StartsWith, NotStartsWith, EndsWith, NotEndsWith, isEmpty, isNotEmpty).</description>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equals</fullName>
            </value>
            <value>
                <fullName>NotEquals</fullName>
            </value>
            <value>
                <fullName>Contains</fullName>
            </value>
            <value>
                <fullName>NotContains</fullName>
            </value>
            <value>
                <fullName>StartsWith</fullName>
            </value>
            <value>
                <fullName>NotStartsWith</fullName>
            </value>
            <value>
                <fullName>EndsWith</fullName>
            </value>
            <value>
                <fullName>NotEndsWith</fullName>
            </value>
            <value>
                <fullName>isEmpty</fullName>
            </value>
            <value>
                <fullName>isNotEmpty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>