force-app/main/default/objects/AuditTrailWatcherRuleCondition__c/fields/SourceField__c.field-meta.xml
<CustomField>
    <fullName>SourceField__c</fullName>
    <description>Setup Audit Trail field name to evaluate with Operator and Value</description>
    <inlineHelpText>e.g. Display, Section, DelegateUser, when empty, Display is used.</inlineHelpText>
    <label>Source Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>