force-app/main/default/objects/AuditTrailWatcherRuleCondition__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>The value to compare against the Display field using the selected operator.</description>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>