force-app/main/default/objects/AuditTrailWatcherRuleCondition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ConditionNumber__c</columns>
    <columns>SourceField__c</columns>
    <columns>Operator__c</columns>
    <columns>Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>